# fast-todo-backend

./: .gitignore  pyproject.toml
.github/workflows/: push-package.yml  release-package.yml
app/: generate-open-api-schema.py  main.py
app/models/: todo.py
app/routers/: todos.py
sdk/typescript/fast-todo-backend-openapi-typescript/: package.json
sdk/typescript/fast-todo-backend-openapi-zodios/: .npmrc  package.json  pnpm-lock.yaml
