[project]
name = "fast-todo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "sqlmodel>=0.0.14",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
