[project]
name = "fast-todo-backend"
version = "0.2.0"
description = "FastApi Todo Backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "sqlmodel>=0.0.14",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
